# live-streaming

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
client/src/: App.js
include/: LiveSubSystem.h
include/Network/: MediaTypeMapper.h  WebServerDispatcher.h  WebServerRequestHandler.h  WebServerRequestHandlerFactory.h
include/Network/router/: VideoStreamingRequestHandlerFactory.h
include/services/webcam/: WebcamService.h
sample/: LIVE-STREAMING.properties
sample/page/: asset-manifest.json  index.html
sample/page/static/js/: 2.37b20d8b.chunk.js  2.37b20d8b.chunk.js.map  3.9c1f1f2d.chunk.js  3.9c1f1f2d.chunk.js.map  main.1788cfa5.chunk.js  main.1788cfa5.chunk.js.map  runtime-main.b6eaaed4.js  runtime-main.b6eaaed4.js.map
src/: LiveSubSystem.cpp  main.cpp
src/Network/: MediaTypeMapper.cpp  WebServerDispatcher.cpp  WebServerRequestHandler.cpp  WebServerRequestHandlerFactory.cpp
src/Network/router/: VideoStreamingRequestHandlerFactory.cpp
src/services/webcam/: WebcamService.cpp
